syntax = "proto3";

package ark.delegator;
option csharp_namespace = "NArk.Delegator";

import "google/api/annotations.proto";

/* Intent Delegation Service - Allows users to delegate intent management */

service DelegationService {
  // GetInfo returns the delegation service information
  rpc GetInfo(GetInfoRequest) returns (GetInfoResponse) {
    option (google.api.http) = {
      get: "/v1/delegation/info"
    };
  };

  // Delegate submits an intent with BIP322 signature and forfeit transaction
  rpc Delegate(DelegateRequest) returns (DelegateResponse) {
    option (google.api.http) = {
      post: "/v1/delegation/delegate"
      body: "*"
    };
  };
}

message GetInfoRequest {}

message GetInfoResponse {
  string ark_server = 1;
  string public_key = 2;
}

message DelegateRequest {
  Bip322Signature bip322_signature = 1;
  repeated string forfeit = 2;
}

message DelegateResponse {
  string intent_id = 1;
}

message Bip322Signature {
  string signature = 1;
  string message = 2;
}
